
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int empty ;


 int PAGE_SIZE ;
 int debug1 (char*,unsigned long,size_t) ;
 int memset (char*,int ,int) ;
 size_t min (size_t,size_t) ;
 scalar_t__ page_check_phys (unsigned long) ;
 int phys_read_range (unsigned long,size_t,char*) ;
 int write_bytes (int,unsigned long,char*,size_t) ;

void read_phys_memory(unsigned long src_addr, unsigned long offset,
   size_t length, int fd) {
 char buffer[PAGE_SIZE];
 char empty[PAGE_SIZE];

 debug1("read_phys_memory: offset = %016lx, length = %016lx\n",
   offset, length);

 memset(&empty[0], 0, sizeof(empty));

 size_t total_read = 0;
 while (total_read < length) {
  unsigned long current = offset + total_read;
  size_t to_read = PAGE_SIZE;
  if (current % PAGE_SIZE != 0)
   to_read = PAGE_SIZE - current % PAGE_SIZE;
  to_read = min(to_read, length - total_read);
  if (page_check_phys(offset + total_read)) {
   phys_read_range(offset + total_read, to_read,
      &buffer[0]);
   write_bytes(fd, src_addr + offset + total_read,
     &buffer[0], to_read);
  } else {
   write_bytes(fd, src_addr + offset + total_read,
     &empty[0], to_read);
  }
  total_read += to_read;
 }
}
